Make Horizontal Calendar View

--- a/FollowMe/app/src/main/res/layout/activity_main.xml
+++ b/FollowMe/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="viewModel"
-            type="com.ghdev.followme.ui.MainViewModel" />
+            type="com.ghdev.followme.viewmodel.MainViewModel" />
     </data>
 
 
