--- a/FollowMe/app/src/main/res/layout/fragment_course_recommend.xml
+++ b/FollowMe/app/src/main/res/layout/fragment_course_recommend.xml
@@ -14,7 +14,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:descendantFocusability="blocksDescendants">
 
             <!--toolbar-->
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -89,6 +90,7 @@
                 android:id="@+id/rv_course_reco"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/cl_category_filter" />
