--- a/FollowMe/app/src/main/res/layout/fragment_place_detail.xml
+++ b/FollowMe/app/src/main/res/layout/fragment_place_detail.xml
@@ -34,15 +34,43 @@
         app:layout_constraintTop_toBottomOf="@id/tv_place_detail_title"
         android:layout_marginTop="10dp"
         android:background="@color/colorMain"/>
+    
+    <ImageView
+        android:id="@+id/btn_place_detail_add_mypick"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:src="@drawable/btn_add_mypick"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_place_detail_add_mycourse"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"/>
+
+    <ImageView
+        android:id="@+id/btn_place_detail_add_mycourse"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:src="@drawable/btn_add_mycourse"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="40dp"
+        android:layout_marginRight="8dp"/>
+
+
+        
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/detail_title_line"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
     <LinearLayout
         android:id="@+id/ll_place_detail_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/detail_title_line"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+       >
 
     
     <androidx.recyclerview.widget.RecyclerView
@@ -146,6 +174,6 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
-
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
