--- a/Backend/search/src/main/resources/templates/all/search.mustache
+++ b/Backend/search/src/main/resources/templates/all/search.mustache
@@ -1,10 +1,3 @@
 <!DOCTYPE HTML>
-<form href="/doc/search" method="post">
-    <div class="input-field col s6">
-        <button class="btn indigo waves-effect waves-light"
-                type="submit" name="save">
+<form id="target"> <input type="text" value="Hello there" /> <input type="submit" value="Go" /> </form> <div id="other"> Trigger the handler </div>
 
-            Submit<i class="mdi-content-send right"></i>
-        </button>
-    </div>
-</form>
