Elasticsearch config 생성자주입으로 변경.

--- a/Backend/search/src/main/resources/templates/all/search.mustache
+++ b/Backend/search/src/main/resources/templates/all/search.mustache
@@ -1,3 +1,11 @@
 <!DOCTYPE HTML>
-<form id="target"> <input type="text" value="Hello there" /> <input type="submit" value="Go" /> </form> <div id="other"> Trigger the handler </div>
+<div>
+    <form id="target" action="/search" method="post">
+        <input type="text" value="Hello there" />
+        <input type="text" value="Hello there" />
+        <input type="submit" value="Go" />
+    </form>
+</div>
 
+<script>
+</script>
